--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <title>Polignano GO</title>
+
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+
+  <style>
+    body { margin: 0; font-family: sans-serif; }
+    #map { width: 100%; height: 90vh; }
+    h1 { padding: 10px; margin: 0; }
+  </style>
 </head>
 <body>
-  <h1>Polignano GO – Test</h1>
+
+  <h1>Polignano GO</h1>
   <div id="map"></div>
 
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <script src="app.js"></script>
+
 </body>
 </html>
