--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Polignano GO</title>
+  <title>Polignano GO - Test Mappa</title>
 
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
 
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <h1>Polignano GO</h1>
+  <h1>Polignano GO - Test Mappa</h1>
   <div id="map"></div>
 
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
